# pyanno4rt

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: conf.py  contributing.md  development.md  example.ipynb  example_patient_data.mat  example_photon_dij.mat  general.md  help_support.md  index.rst  installation.md  requirements.txt  templates.ipynb
docs/_static/: site.webmanifest
docs/_static/css/: custom.css
docs/_templates/autoapi/: macros.rst
pyanno4rt/: __init__.py
pyanno4rt/base/: __init__.py  _treatment_plan.py
pyanno4rt/datahub/: __init__.py  _datahub.py
pyanno4rt/dose_info/: __init__.py  _dose_info_generator.py
pyanno4rt/evaluation/: __init__.py  _dosimetrics.py  _dosimetrics_evaluator.py  _dvh.py  _dvh_evaluator.py
pyanno4rt/gui/: __init__.py  _gui.py
pyanno4rt/gui/assets/: resources.qrc
pyanno4rt/gui/compilations/: compare_window.py  info_window.py  log_window.py  main_window.py  plan_creation_window.py  settings_window.py  text_window.py  tree_window.py
pyanno4rt/gui/custom_widgets/: __init__.py  _dvh_widget.py  _slice_compare_widget.py  _slice_widget.py
pyanno4rt/gui/designs/: compare_window.ui  component_window.ui  info_window.ui  log_window.ui  main_window.ui  plan_creation_window.ui  settings_window.ui  text_window.ui  tree_window.ui
pyanno4rt/gui/styles/: _custom_styles.py
pyanno4rt/gui/windows/: __init__.py  _compare_window.py  _info_window.py  _log_window.py  _main_window.py  _plan_creation_window.py  _settings_window.py  _text_window.py  _tree_window.py  info_window.py  log_window.py  main_window.py  settings_window.py
pyanno4rt/input_check/: __init__.py  _input_checker.py
pyanno4rt/input_check/check_functions/: __init__.py  _check_components.py  _check_dose_matrix.py  _check_extension.py  _check_extensions_in_folder.py  _check_feature_filter.py  _check_key_in_dict.py  _check_length.py  _check_path.py  _check_regular_extension.py  _check_regular_extension_directory.py  _check_subtype.py  _check_type.py  _check_value.py  _check_value_in_set.py
pyanno4rt/input_check/check_maps/: __init__.py  _component_map.py  _configuration_map.py  _evaluation_map.py  _model_display_map.py  _model_map.py  _objective_map.py  _optimization_map.py  _top_level_map.py  _tune_space_map.py
pyanno4rt/learning_model/: __init__.py  _data_model_handler.py
pyanno4rt/learning_model/data/: __init__.py  _dataset.py  _tabular_dataset.py
pyanno4rt/learning_model/dataset/: __init__.py  _tabular_data_generator.py
pyanno4rt/learning_model/evaluation/: __init__.py  _model_evaluator.py
pyanno4rt/learning_model/features/: __init__.py  _feature_calculator.py  _feature_map_generator.py
pyanno4rt/learning_model/frequentist/: __init__.py  _decision_tree.py  _extreme_gradient_boosting.py  _k_nearest_neighbors.py  _logistic_regression.py  _machine_learning_model.py  _naive_bayes.py  _neural_network.py  _random_forest.py  _support_vector_machine.py
pyanno4rt/learning_model/inspection/: __init__.py  _model_inspector.py
pyanno4rt/learning_model/losses/: __init__.py  _brier_loss.py  _log_loss.py  _loss_map.py
pyanno4rt/learning_model/preprocessing/: __init__.py  _data_preprocessor.py
pyanno4rt/logging/: __init__.py  _logger.py
pyanno4rt/optimization/: __init__.py  _fluence_initializer.py  _fluence_optimizer.py
pyanno4rt/optimization/components/: __init__.py  _component_map.py  _conventional_component_class.py  _decision_tree_ntcp.py  _decision_tree_tcp.py  _dose_uniformity.py  _equivalent_uniform_dose.py  _k_nearest_neighbors_ntcp.py  _k_nearest_neighbors_tcp.py  _logistic_regression_ntcp.py  _logistic_regression_tcp.py  _lq_poisson_tcp.py  _lyman_kutcher_burman_ntcp.py  _machine_learning_component_class.py  _maximum_dvh.py  _mean_dose.py  _minimum_dvh.py  _naive_bayes_ntcp.py  _naive_bayes_tcp.py  _neural_network_ntcp.py  _neural_network_tcp.py  _radiobiology_component_class.py  _random_forest_ntcp.py  _random_forest_tcp.py  _squared_deviation.py  _squared_overdosing.py  _squared_underdosing.py  _support_vector_machine_ntcp.py  _support_vector_machine_tcp.py
pyanno4rt/optimization/initializers/: __init__.py  _fluence_initializer.py
pyanno4rt/optimization/methods/: __init__.py  _lexicographic_optimization.py  _method_map.py  _pareto_optimization.py  _weighted_sum_optimization.py
pyanno4rt/optimization/projections/: __init__.py  _backprojection.py  _constant_rbe_projection.py  _dose_projection.py  _projection_map.py  _projections_map.py
pyanno4rt/optimization/solvers/: INSTALL_IPOPT_ON_LINUX.md  __init__.py  _ipopt_solver.py  _proxmin_solver.py  _pyanno4rt_solver.py  _pymoo_solver.py  _pypop7_solver.py  _scipy_solver.py  _solver_map.py  _solvers_map.py
pyanno4rt/patient/: __init__.py  _patient_loader.py
pyanno4rt/patient/import_functions/: __init__.py  (+12 more)
pyanno4rt/plan/: __init__.py  _plan_generator.py
pyanno4rt/tools/: __init__.py  _add_square_brackets.py  _apply.py  _arange_with_endpoint.py  _compare_dictionaries.py  _copycat.py  _custom_round.py  _deduplicate.py  _flatten.py  _get_all_constraints.py  _get_all_objectives.py  _get_constraint_segments.py  _get_conventional_constraints.py  _get_conventional_objectives.py  _get_machine_learning_constraints.py  _get_machine_learning_objectives.py  _get_model_objectives.py  _get_objective_segments.py  _get_objectives.py  _get_radiobiology_constraints.py  _get_radiobiology_objectives.py  _identity.py  _inverse_sigmoid.py  _load_list_from_file.py  _make_list_string.py  _monotonic.py  _non_decreasing.py  _non_increasing.py  _replace_nan.py  _sigmoid.py  _snapshot.py
pyanno4rt/visualization/: __init__.py  _visualizer.py
tests/: test_identity.py
tests/test_tools/: test_add_square_brackets.py  test_arange_with_endpoint.py  test_compare_dictionaries.py  test_copycat.py  test_custom_round.py  test_deduplicate.py  test_flatten.py  test_identity.py  test_inverse_sigmoid.py  test_load_list_from_file.py  test_monotonic.py  test_non_decreasing.py  test_non_increasing.py  test_replace_nan.py  test_sigmoid.py
(+223 files in other folders)
