[tool.poetry]
name = "pyanno4rt"
version = "0.5.0"
description = "A package for Python-based advanced numerical nonlinear optimization in radiotherapy."
license = "LICENSE"
authors = [ "Tim Ortkamp <tim.ortkamp@kit.edu>" ]
readme = "README.md"
repository = "https://github.com/pyanno4rt/pyanno4rt"
documentation = "https://pyanno4rt.readthedocs.io/en/latest/"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]

  [[tool.poetry.packages]]
  include = "pyanno4rt"

  [tool.poetry.dependencies]
  python = ">=3.10, <3.12"
  proxmin = ">=0.6.12"
  absl-py = ">=2.1.0"
  pydicom = ">=2.4.4"
  scikit-image = ">=0.23.2"
  h5py = ">=3.11.0"
  pandas = ">=2.2.1"
  fuzzywuzzy = ">=0.18.0"
  jax = ">=0.4.27"
  jaxlib = ">=0.4.27"
  numba = ">=0.59.1"
  python-levenshtein = ">=0.25.1"
  scikit-learn = ">=1.4.2"
  tensorflow-io-gcs-filesystem = "0.34.0"
  tensorflow = "2.14.0"
  hyperopt = ">=0.2.7"
  pymoo = ">=0.6.1.1"
  pyqt5-qt5 = "5.15.2"
  pyqt5 = "5.15.10"
  pyqtgraph = ">=0.13.7"
  ipython = ">=8.24.0"
  seaborn = ">=0.13.2"
  pypop7 = ">=0.0.79"

[tool.poetry.group.dev.dependencies]
pyqtwebengine-qt5 = "5.15.2"
spyder = "5.4.5"
spyder-kernels = "2.4.4"
jupyter = ">=1.0.0"
sphinx = ">=7.3.7"
sphinx-rtd-theme = ">=2.0.0"
sphinx-autoapi = ">=3.0.0"
myst-nb = ">=1.1.0"
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
coveralls = ">=4.0.0"
python-semantic-release = ">=9.7.1"
sphinx-copybutton = ">=0.5.2"
sphinx-last-updated-by-git = ">=0.3.7"
sphinx-favicon = ">=1.0.1"

  [tool.poetry.urls]
  "Bug Tracker" = "https://github.com/pyanno4rt/pyanno4rt/issues"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
upload_to_pypi = false
upload_to_release = true
remove_dist = false
patch_without_tag = true

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
